log
Sat, May 17, 2025  5:50:58 PM: 
 sudoku.c | 125 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 122 insertions(+), 3 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:184:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Sat, May 17, 2025  5:51:23 PM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:184:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
7421b97
